# dbt-python-snowpark-f1

./: .dbtignore  .envrc  .gitignore  README.md  README_v2.md  dbt-env.yml  dbt_project.yml  env-dbt.yml  env-prep.yml  env-train.yml  environment.yml  ml-prep-env.yml  ml-train-env.yml  pyproject.toml
analyses/: fastest_pit_stops_by_constructor.py  predicted_podium_drivers.sql
macros/: convert_laptime.sql  upper_no_space.sql
models/core/: _dim_circuits.yml  _dim_constructors.yml  _dim_drivers.yml  _dim_races.yml  _dim_seasons.yml  _dim_status.yml  _fct_constructor_results.yml  _fct_constructor_standings.yml  _fct_driver_standings.yml  _fct_lap_times.yml  _fct_pit_stops.yml  _fct_qualifying.yml  _fct_results.yml  _fct_sprint_results.yml  core.yml  dim_circuits.sql  dim_constructors.sql  dim_drivers.sql  dim_races.sql  dim_seasons.sql  dim_status.sql  fct_constructor_results.sql  fct_constructor_standings.sql  fct_driver_standings.sql  fct_lap_times.sql  fct_pit_stops.sql  fct_qualifying.sql  fct_results.sql  fct_sprint_results.sql
models/marts/core/: _fct_results.yml  fct_results.sql
models/ml/predict/: _f1_predict_podium_points.yml  f1_predict_podium_points.py
models/ml/prep/: f1_features.sql  f1_preprocess_pipeline.ipynb
models/ml/train/: f1_train_model.ipynb
models/staging/formula1/: __f1_column_docs.md  __f1_model_docs.md  __f1_overview.md  __f1_sources.yml  _stg_circuits.yml  _stg_constructor_results.yml  _stg_constructor_standings.yml  (+53 more)
setup/: f1_snowflake_load_data.sql  f1_snowflake_setup.sql
tests/: lap_times_moving_avg_assert_positive_or_null.sql
